Add PrimeScope visitor tracker script

--- a/index.html
+++ b/index.html
@@ -1128,5 +1128,7 @@ input[type="text"], input[type="number"], select{ padding:10px; border-radius:8p
 
 /* End of main closure */
 </script>
+   <!-- PrimeScope visitor tracker -->
+<script src="https://counter.dev/track.js" data-id="b0b6cc33-91cd-4b26-bff0-6db8b7c6e7e1" data-utcoffset="0"></script>
 </body>
 </html>
