--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,6 @@ input[type="text"], input[type="number"], select{ padding:10px; border-radius:8p
 /* End of main closure */
 </script>
    <!-- PrimeScope visitor tracker -->
-<script src="https://counter.dev/track.js" data-id="b0b6cc33-91cd-4b26-bff0-6db8b7c6e7e1" data-utcoffset="0"></script>
+   <script src="https://cdn.counter.dev/script.js" data-id="79bf7acb-48d1-4270-82eb-8354bacd98bc" data-utcoffset="0"></script>
 </body>
 </html>
