Update title and add meta description in index.html
Updated the title and added a meta description for SEO.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PrimeScope — In Numeris Lux</title>
+   <title>PrimeScope 🔭 | Explore Prime Numbers Visually</title>
+<meta name="description" content="PrimeScope lets you discover, visualize, and understand prime numbers in new ways — a simple yet powerful math exploration tool." />
 
 <!-- Fonts (Google) -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
