--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <!-- Fonts (Google) -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+   <link rel="manifest" href="manifest.json">
+   
 
 <style>
 /* =========================================================================
