--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
    <title>PrimeScope 🔭 | Explore Prime Numbers Visually</title>
 <meta name="description" content="PrimeScope lets you discover, visualize, and understand prime numbers in new ways — a simple yet powerful math exploration tool." />
 
-<!-- Fonts (Google) -->
+<!-- Links -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
    <link rel="manifest" href="manifest.json">
    
+   <link rel="stylesheet" href="style.css">
 
 <style>
 /* =========================================================================
