--- a/index.html
+++ b/index.html
@@ -1131,6 +1131,9 @@ input[type="text"], input[type="number"], select{ padding:10px; border-radius:8p
 </script>
    <!-- PrimeScope visitor tracker -->
    <script src="https://cdn.counter.dev/script.js" data-id="79bf7acb-48d1-4270-82eb-8354bacd98bc" data-utcoffset="0"></script>
+   <script data-goatcounter="https://japheth.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
    <!-- Public visitor badge -->
 <p style="text-align:center; margin-top:20px;">
   <img src="https://visitor-badge.laobi.icu/badge?page_id=japhethodameboamah-debug.PrimeScope" alt="visitors"/>
