Add stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!-- Links -->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
    <link rel="manifest" href="manifest.json">
+   <link rel="stylesheet" href="style.css">
 <style>
 /* =========================================================================
    PrimeScope — Single-file Webapp
